--- a/src/TinderCards.css
+++ b/src/TinderCards.css
@@ -22,7 +22,7 @@
 .tinderCards_cardContainer {
     display: flex;
     justify-content: center;
-    margin-top: 5vh;
+    margin-top: 50h;
 }
 
 .swipe {
