fixed up signin

--- a/src/SwipeButtons.css
+++ b/src/SwipeButtons.css
@@ -1,4 +1,4 @@
-.swipeButtons {
+.buttons {
     position: fixed;
     bottom: 5vh;
     width: 100%;
@@ -6,7 +6,7 @@
     justify-content: space-evenly;
 }
 
-.swipeButtons .MuiIconButton-root {
+.buttons .MuiIconButton-root {
     background-color: white;
     box-shadow: 0px 10px 53px 0px rgba(0,0,0,0.3) !important;
 }
