--- a/src/TinderCards.css
+++ b/src/TinderCards.css
@@ -7,7 +7,7 @@
     border-radius: 20px;
     background-size: cover;
     background-position: center;
-    box-shadow: 0px 18px 53px 0px rgba(0,0,0, 0.3);
+    box-shadow: 0px 18px 53px 0px rgba(43, 86, 194, 0.3);
 
 }
 
@@ -23,6 +23,7 @@
     display: flex;
     justify-content: center;
     margin-top: 50h;
+
 }
 
 .swipe {
